Prevent pull down refresh on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  overscroll-behavior: none;
+}
+
 html,
 body {
   display: block;
